Add core structure for home page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,20 @@
 </head>
 
 <body>
-    <h1>Hello World!</h1>
+    <header>Header content</header>
+
+    <section>
+        Main image
+    </section>
+    <section>
+        about us
+    </section>
+    <section>
+        services
+    </section>
+    <footer>
+        Address map, social
+    </footer>
 
 </body>
 
