--- a/index.html
+++ b/index.html
@@ -14,7 +14,24 @@
 </head>
 
 <body>
-    <header>Header content</header>
+    <header>
+        <a href="index.html">
+            <h1>Simeio Therapy</h1>
+        </a>
+        <nav>
+            <ul>
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+                    <a href="#">About Us</a>
+                </li>
+                <li>
+                    <a href="#">Contact</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
 
     <section>
         Main image
