Add style for headings and logo

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 <body>
     <header>
         <a href="index.html">
-            <h1>Simeio Therapy</h1>
+            <h1 id="logo">
+                <img src="assets/images/logo-image.png" alt="Home button">
+            </h1>
         </a>
         <nav>
             <ul>
