--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
                 <img src="assets/images/logo-image.png" alt="Home button">
             </h1>
         </a>
-        <nav>
+        <nav id="menu">
             <ul>
                 <li>
-                    <a href="index.html">Home</a>
+                    <a href="index.html" class="active">Home</a>
                 </li>
                 <li>
                     <a href="#">About Us</a>
