Add image and about us content

--- a/index.html
+++ b/index.html
@@ -36,10 +36,20 @@
     </header>
 
     <section>
-        Main image
+        <div id="bg-header"></div>
     </section>
     <section>
-        about us
+        <span id="image-left"></span>
+        <div>
+            <h2>About Us</h2>
+            <h3>Who we are</h3>
+            <p>
+                Four therapists starting from different points (different fields) joined their paths. Driven by their
+                love for their fellow man, vision and common values, they fulfilled their dream to create a space that
+                promotes the enlightenment of the individual. Our main concern is the respect of each patient and his
+                uniqueness, the inclusion of all specialties, the individual and the family in the therapeutic journey.
+            </p>
+        </div>
     </section>
     <section>
         services
