Style image and about section

--- a/index.html
+++ b/index.html
@@ -36,19 +36,27 @@
     </header>
 
     <section>
-        <div id="bg-header"></div>
-    </section>
-    <section>
-        <span id="image-left"></span>
-        <div>
-            <h2>About Us</h2>
-            <h3>Who we are</h3>
-            <p>
-                Four therapists starting from different points (different fields) joined their paths. Driven by their
-                love for their fellow man, vision and common values, they fulfilled their dream to create a space that
-                promotes the enlightenment of the individual. Our main concern is the respect of each patient and his
-                uniqueness, the inclusion of all specialties, the individual and the family in the therapeutic journey.
-            </p>
+        <div class="main-bg">
+            <div id="image-left">
+                <div id="image-left-container">
+                    <div id="image-left-container-bg">
+
+                    </div>
+                </div>
+            </div>
+            <div id="right-about">
+                <h3>About us</h3>
+                <p>
+                    Four therapists starting from different points (different fields) joined their paths. Driven by
+                    their
+                    love for their fellow man, vision and common values, they fulfilled their dream to create a space
+                    that
+                    promotes the enlightenment of the individual. Our main concern is the respect of each patient and
+                    his
+                    uniqueness, the inclusion of all specialties, the individual and the family in the therapeutic
+                    journey.
+                </p>
+            </div>
         </div>
     </section>
     <section>
