Add and style services and image

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+    <!--Logo and navbar with links-->
     <header>
         <a href="index.html">
             <h1 id="logo">
@@ -35,6 +36,9 @@
         </nav>
     </header>
 
+
+    <!-- About us and Image-->
+
     <section>
         <div class="main-bg">
             <div id="image-left">
@@ -45,7 +49,7 @@
                 </div>
             </div>
             <div id="right-about">
-                <h3>About us</h3>
+                <h3>Welcome to the Center for Special Treatments "Simeio"</h3>
                 <p>
                     Four therapists starting from different points (different fields) joined their paths. Driven by
                     their
@@ -59,8 +63,41 @@
             </div>
         </div>
     </section>
+
+    <!--Services-->    
+
     <section>
-        services
+        <div id="services">
+            <div id="services-left">
+                <div id="services-left-link">
+                    <a href="speech-therapy.html">Speech Therapy</a>
+                </div>
+
+                <div id="services-left-link">
+                    <a href="#">Occupational Therapy Robotics</a>
+                </div>
+            </div>
+
+            <div id="services-right">
+                <div id="services-right-link">
+                    <a href="#">Occupational Therapy</a>
+                </div>
+
+                <div id="services-right-link">
+                    <a href="#">Parental Counselling</a>
+                </div>
+            </div>
+
+            <div>
+                <div id="image-right">
+                    <div id="image-right-container">
+                        <div id="image-right-container-bg">
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
     <footer>
         Address map, social
