Add and style social links to footer

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </div>
     </section>
 
-    <!--Services-->    
+    <!--Services-->
 
     <section>
         <div id="services">
@@ -100,8 +100,29 @@
         </div>
     </section>
     <footer>
-        Address map, social
+        <div>
+            Address
+        </div>
+        <div id="social">
+            <ul>
+                <li>
+                    <a href="https://facebook.com" target="_blank" aria-label="Visit our Facebook page"><i class="fa-brands fa-facebook"></i></a>
+                </li>
+                <li>
+                    <a href="https://twitter.com" target="_blank" aria-label="Visit our Twitter page"><i class="fa-brands fa-twitter"></i></a>
+                </li>
+                <li>
+                    <a href="https://instagram.com" aria-label="Visit our Instagram page"><i class="fa-brands fa-youtube"></i></a>
+                </li>
+                <li>
+                    <a href="https://youtube.com" aria-label="Visit our Youtube page"><i class="fa-brands fa-youtube"></i></a>
+                </li>
+            </ul>
+        </div>
     </footer>
+
+    <!--Font awesome script-->
+    <script src="https://kit.fontawesome.com/cdf0a3356f.js" crossorigin="anonymous"></script>
 
 </body>
 
