--- a/index.html
+++ b/index.html
@@ -67,28 +67,31 @@
     <!--Services-->
 
     <section>
+        
         <div id="services">
+            <h2>Services</h2> 
             <div id="services-left">
-                <div id="services-left-link">
+                <div class="services-left-link">
                     <a href="speech-therapy.html">Speech Therapy</a>
                 </div>
 
-                <div id="services-left-link">
+                <div class="services-left-link">
                     <a href="#">Occupational Therapy Robotics</a>
                 </div>
             </div>
 
             <div id="services-right">
-                <div id="services-right-link">
+                <div class="services-right-link">
                     <a href="#">Occupational Therapy</a>
                 </div>
 
-                <div id="services-right-link">
+                <div class="services-right-link">
                     <a href="#">Parental Counselling</a>
                 </div>
             </div>
 
             <div>
+               
                 <div id="image-right">
                     <div id="image-right-container">
                         <div id="image-right-container-bg">
@@ -101,23 +104,44 @@
     </section>
     <footer>
         <div>
-            Address
-        </div>
-        <div id="social">
-            <ul>
-                <li>
-                    <a href="https://facebook.com" target="_blank" aria-label="Visit our Facebook page"><i class="fa-brands fa-facebook"></i></a>
-                </li>
-                <li>
-                    <a href="https://twitter.com" target="_blank" aria-label="Visit our Twitter page"><i class="fa-brands fa-twitter"></i></a>
-                </li>
-                <li>
-                    <a href="https://instagram.com" aria-label="Visit our Instagram page"><i class="fa-brands fa-youtube"></i></a>
-                </li>
-                <li>
-                    <a href="https://youtube.com" aria-label="Visit our Youtube page"><i class="fa-brands fa-youtube"></i></a>
-                </li>
-            </ul>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d757.3097164575439!2d22.9523887!3d40.6025532!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14a8392823fc16bb%3A0x88798ef740c4f290!2sSpeech%20Therapy%20center!5e0!3m2!1sen!2suk!4v1679087569116!5m2!1sen!2suk"
+                width="500" height="200" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
+            <div id="social">
+                <ul>
+                    <li>
+                        <a href="https://facebook.com" target="_blank" aria-label="Visit our Facebook page"><i
+                                class="fa-brands fa-facebook"></i></a>
+                    </li>
+                    <li>
+                        <a href="https://twitter.com" target="_blank" aria-label="Visit our Twitter page"><i
+                                class="fa-brands fa-twitter"></i></a>
+                    </li>
+                    <li>
+                        <a href="https://instagram.com" aria-label="Visit our Instagram page"><i
+                                class="fa-brands fa-youtube"></i></a>
+                    </li>
+                    <li>
+                        <a href="https://youtube.com" aria-label="Visit our Youtube page"><i
+                                class="fa-brands fa-youtube"></i></a>
+                    </li>
+                </ul>
+            </div>
+
+            <div id="address">
+                <h2><a href="#">Contact</a></h2>
+                <h3>Address</h3>
+                <p><i class="fa-solid fa-location-dot"></i> Vasilis Olgas 128, Thessaloniki, Greece</p>
+                <p><i class="fa-solid fa-phone"></i> 01234567890</p>
+
+            </div>
+
+
+
+
+
         </div>
     </footer>
 
