Update content to services section

--- a/index.html
+++ b/index.html
@@ -66,113 +66,106 @@
 
     <!--Services-->
 
-    <section>
+    <section class="services-container">
 
-        <div id="services">
-            <h2>Services</h2>
-            <div id="services-left">
-                <div class="services-left-link">
-                    <h3>Speech Therapy</h3>
-                    <p>
-                        Speech therapy is the science that has as its subject the study, research and application of
-                        scientific knowledge about Human Communication (verbal or not), Speech (oral, written) Speech,
-                        Voice, and their disorders, as well as swallowing and feeding disorders. swallowing movements of
-                        the oropharynx
+        <!-- <h2>Services</h2> -->
 
-                        Speech therapy contributes to the improvement of the linguistic, cognitive and communication
-                        skills of people of all ages who face difficulties that hinder them in daily activities.
+        <div id="services-left-1">
+            <h3>Speech Therapy</h3>
+            <p>
+                Speech therapy is the science that has as its subject the study, research and application of
+                scientific knowledge about Human Communication (verbal or not), Speech (oral, written) Speech,
+                Voice, and their disorders, as well as swallowing and feeding disorders.
+                Speech therapy contributes to the improvement of the linguistic, cognitive and communication
+                skills of people of all ages who face difficulties that hinder them in daily activities.
+                Child development is a normal process of progression from an early and lower level of
+                functionality to a more complex one, such as that of adults. Although each child has its own
+                rate of language development, there are some linguistic milestones, i.e. "indicators" that serve
+                to highlight the level of functioning of the child in relation to the expected levels based on
+                his age in various areas of the individual's functionality. . The deviation from these
+                milestones may be an indication that we should visit a speech therapist to have an assessment
+                done and if required to proceed with the intervention through an individualized treatment
+                program.
+            </p>
+        </div>
+        <div id="services-left-2">
+            <h3>Occupational Therapy Robotics</h3>
+            <p>
+                Robotics is considered as an innovative activity that begins to enter dynamically and affect the
+                educational process. Occupational therapy through robotics is an occupational therapy
+                intervention program that uses the activity of robotics as a therapeutic agent. During this
+                intervention the child enters the process of building his robot and programming it to do some
+                process. The objectives of the program are for the child to increase his construction skills,
+                reduce his impulse, develop and improve his executive functions such as problem solving and
+                working memory and increase the ability to cooperate. It is aimed at children mainly with
+                attention deficit disorder with or without hyperactivity, with learning difficulties, with
+                difficulties in practice skills and with difficulties in social interaction. It is a very
+                pleasant way of occupational therapy intervention that motivates children to try harder. Through
+                creation, the feeling of fulfillment is created which increases the self-esteem of the child and
+                gives quality and satisfaction to his life.
+            </p>
+        </div>
+        <div class="services-image">
+            <img src="assets/images/image-center.jpg" width="600" height="400" alt="">
+        </div>
 
-                        Child development is a normal process of progression from an early and lower level of
-                        functionality to a more complex one, such as that of adults. Although each child has its own
-                        rate of language development, there are some linguistic milestones, i.e. "indicators" that serve
-                        to highlight the level of functioning of the child in relation to the expected levels based on
-                        his age in various areas of the individual's functionality. . The deviation from these
-                        milestones may be an indication that we should visit a speech therapist to have an assessment
-                        done and if required to proceed with the intervention through an individualized treatment
-                        program.
-                    </p>
-                </div>
+    </section>
 
-                <div class="services-left-link">
-                    <h3>Occupational Therapy Robotics</h3>
-                    <p>
-                        Robotics is considered as an innovative activity that begins to enter dynamically and affect the
-                        educational process. Occupational therapy through robotics is an occupational therapy
-                        intervention program that uses the activity of robotics as a therapeutic agent. During this
-                        intervention the child enters the process of building his robot and programming it to do some
-                        process. The objectives of the program are for the child to increase his construction skills,
-                        reduce his impulse, develop and improve his executive functions such as problem solving and
-                        working memory and increase the ability to cooperate. It is aimed at children mainly with
-                        attention deficit disorder with or without hyperactivity, with learning difficulties, with
-                        difficulties in practice skills and with difficulties in social interaction. It is a very
-                        pleasant way of occupational therapy intervention that motivates children to try harder. Through
-                        creation, the feeling of fulfillment is created which increases the self-esteem of the child and
-                        gives quality and satisfaction to his life.
-                    </p>
-                </div>
-            </div>
+    <section class="services-container">
 
-            <div id="services-right">
-                <div class="services-right-link">
-                    <h3>Occupational Therapy</h3>
-                    <p>Occupational therapy" as a term is derived from the words "work" and "therapy". It could be
-                        defined as therapy through work (activity) but also therapy for work (activity). Occupational
-                        therapy uses purposeful activity as a means of treatment. At the same time, it is concerned,
-                        through it, that the individual is able to engage in all the activities that have meaning for
-                        him adequately. It is a science of rehabilitation where in a holistic way it aims at the
-                        autonomy and functionality of the individual. Pediatric occupational therapy
-                        The pediatric field is one of the main fields of occupation of occupational therapists in
-                        Greece. Play is a very important activity for children and is used therapeutically in
-                        occupational therapy. The most important purpose of pediatric occupational therapy is the
-                        successful involvement of children in school activities (such as attendance in the classroom,
-                        recess, reading at home, etc.), in recreational activities (such as playing on the playground,
-                        cycling, team building play, family activities, etc.) and autonomy (food, clothing, personal
-                        hygiene, etc.) according to the typical standards of each age. The above can be achieved either
-                        by improving some skills of the child that are lacking (such as sensory processing,
-                        concentration, gross and fine motor skills, visual-motor coordination, self-confidence,
-                        self-organization, etc.), or by adapting the environment or the activity to level of the child.
-                    </p>
-                </div>
+        <div id="services-right-1">
+            <h3>Occupational Therapy</h3>
+            <p>Occupational therapy" as a term is derived from the words "work" and "therapy". It could be
+                defined as therapy through work (activity) but also therapy for work (activity). Occupational
+                therapy uses purposeful activity as a means of treatment. At the same time, it is concerned,
+                through it, that the individual is able to engage in all the activities that have meaning for
+                him adequately. It is a science of rehabilitation where in a holistic way it aims at the
+                autonomy and functionality of the individual. Pediatric occupational therapy
+                The pediatric field is one of the main fields of occupation of occupational therapists in
+                Greece. Play is a very important activity for children and is used therapeutically in
+                occupational therapy. The most important purpose of pediatric occupational therapy is the
+                successful involvement of children in school activities (such as attendance in the classroom,
+                recess, reading at home, etc.), in recreational activities (such as playing on the playground,
+                cycling, team building play, family activities, etc.) and autonomy (food, clothing, personal
+                hygiene, etc.) according to the typical standards of each age. The above can be achieved either
+                by improving some skills of the child that are lacking (such as sensory processing,
+                concentration, gross and fine motor skills, visual-motor coordination, self-confidence,
+                self-organization, etc.), or by adapting the environment or the activity to level of the child.
+            </p>
+        </div>
 
-                <div class="services-right-link">
-                    <h3>Parental Counselling</h3>
-                    <p>
-                        Parental counseling takes place between the parents and the psychologist / psychotherapist to
-                        whom they are addressed. Counseling sessions discuss the issues that concern parents in relation
-                        to their child, family or their own role as parents. These issues may concern issues in a
-                        child's behavior, emotional difficulties, difficulties in socialization or difficulties faced by
-                        parents in their own role. Also, in the management of specific situations, such as a death or
-                        loss in the environment of the child, a serious illness that affects the daily life of the
-                        family and the child, the divorce of the parents or a traumatic event. Parental counseling
-                        depending on the situation may be the only intervention or be combined with the psychotherapy of
-                        the child or adolescent, as well as with other interventions, such as speech therapy and
-                        occupational therapy in the context of an overall therapeutic program.
 
-                        The aim in parental counseling is through the relationship that parents develop with the
-                        psychologist / psychotherapist to receive support in their role as parents, to get direction
-                        from the psychologist / psychotherapist in the management of specific issues, not through
-                        general advice but within a framework that takes into account the needs of the specific family
-                        and the specific child, to better understand the difficulties that their child may be facing and
-                        to give space to the development of a common attitude on the part of the parents that favors
-                        their cooperation.
 
-                        Depending on the circumstances, parental counseling may take place with one or both parents and
-                        the frequency of sessions may vary depending on the needs of the family and the therapist's
-                        assessment of the treatment program.
-                    </p>
-                </div>
-            </div>
-
-            <div>
-                <div id="image-center">
-                    <div id="image-center-container">
-                        <div id="image-center-container-bg">
-                        </div>
-                    </div>
-                </div>
-            </div>
+        <div id="services-right-2">
+            <h3>Parental Counselling</h3>
+            <p>
+                Parental counseling takes place between the parents and the psychologist / psychotherapist to
+                whom they are addressed. Counseling sessions discuss the issues that concern parents in relation
+                to their child, family or their own role as parents. These issues may concern issues in a
+                child's behavior, emotional difficulties, difficulties in socialization or difficulties faced by
+                parents in their own role. Also, in the management of specific situations, such as a death or
+                loss in the environment of the child, a serious illness that affects the daily life of the
+                family and the child, the divorce of the parents or a traumatic event. Parental counseling
+                depending on the situation may be the only intervention or be combined with the psychotherapy of
+                the child or adolescent, as well as with other interventions, such as speech therapy and
+                occupational therapy in the context of an overall therapeutic program.
+                The aim in parental counseling is through the relationship that parents develop with the
+                psychologist / psychotherapist to receive support in their role as parents, to get direction
+                from the psychologist / psychotherapist in the management of specific issues, not through
+                general advice but within a framework that takes into account the needs of the specific family
+                and the specific child, to better understand the difficulties that their child may be facing and
+                to give space to the development of a common attitude on the part of the parents that favors
+                their cooperation.
+                Depending on the circumstances, parental counseling may take place with one or both parents and
+                the frequency of sessions may vary depending on the needs of the family and the therapist's
+                assessment of the treatment program.
+            </p>
+        </div>
+        <div class="services-image">
+            <img src="assets/images/image-left.jpg" width="600" height="400" alt="">
         </div>
     </section>
+
     <footer>
         <div>
             <iframe
