Change style from float to flexbox for the header

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 
     <header>
         <a href="index.html">
-            <h1 id="logo">
-                <img src="assets/images/logo-image.png" alt="Home button">
+            <h1>
+                <img src="assets/images/logo-image.png" alt="Home button" class="logo">
             </h1>
         </a>
-        <nav id="menu">
+        <nav class="menu">
             <ul>
                 <li>
                     <a href="index.html" class="active">Home</a>
