--- a/index.html
+++ b/index.html
@@ -39,30 +39,24 @@
 
     <!-- About us and Image-->
 
-    <section>
-        <div class="main-bg">
-            <div id="image-left">
-                <div id="image-left-container">
-                    <div id="image-left-container-bg">
-
-                    </div>
-                </div>
-            </div>
-            <div id="right-about">
-                <h3>Welcome to the Center for Special Treatments "Simeio"</h3>
-                <p>
-                    Four therapists starting from different points (different fields) joined their paths. Driven by
-                    their
-                    love for their fellow man, vision and common values, they fulfilled their dream to create a space
-                    that
-                    promotes the enlightenment of the individual. Our main concern is the respect of each patient and
-                    his
-                    uniqueness, the inclusion of all specialties, the individual and the family in the therapeutic
-                    journey.
-                </p>
-            </div>
+    <section class="main-bg">
+        <div class="image-left">
+            <img src="assets/images/image-left.jpg" width="600" height="400" alt="">
         </div>
+
+        <div class="right-about">
+            <h3>Welcome to the Center for Special Treatments "Simeio"</h3>
+            <p>
+                Four therapists starting from different points (different fields) joined their paths. Driven by
+                their love for their fellow man, vision and common values, they fulfilled their dream to create a space
+                that promotes the enlightenment of the individual. Our main concern is the respect of each patient and
+                his uniqueness, the inclusion of all specialties, the individual and the family in the therapeutic
+                journey.
+            </p>
+        </div>
+
     </section>
+
 
     <!--Services-->
 
