Add header with nav links and logo

--- a/about-us.html
+++ b/about-us.html
@@ -12,3 +12,25 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Simeio Therapy | About Us</title>
 </head>
+<body>
+    <!--Logo and navbar with links-->
+
+    <header>
+        <a href="index.html">
+            <img src="assets/images/logo-image.png" alt="Home button" class="logo">
+        </a>
+        <nav>
+            <ul class="menu">
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+                    <a href="about-us.html" class="active">About Us</a>
+                </li>
+                <li>
+                    <a href="#">Contact</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+</body>
