Add content to about us

--- a/about-us.html
+++ b/about-us.html
@@ -33,4 +33,209 @@
             </ul>
         </nav>
     </header>
+
+     <!-- About us and Image-->
+
+     <section class="main-bg">
+        <div class="image-left">
+            <img src="assets/images/image-left.jpg" width="600" height="400" alt="">
+        </div>
+
+        <div class="right-about">
+            <h3>Welcome to the Center for Special Treatments "Simeio"</h3>
+            <p>
+                Four therapists starting from different points (different fields) joined their paths. Driven by
+                their love for their fellow man, vision and common values, they fulfilled their dream to create a space
+                that promotes the enlightenment of the individual. Our main concern is the respect of each patient and
+                his uniqueness, the inclusion of all specialties, the individual and the family in the therapeutic
+                journey.
+            </p>
+        </div>
+
+    </section>
+    <section class="our-team-container">
+        <h2>Our Team</h2>
+
+        <div class="our-team">
+            <div id="our-team-1">
+                <h3>Maria</h3>
+                <p>
+                    Maria Tsimourdaga is a graduate of St. Kliment Ohridski University, Sofia, Bulgaria. He has a higher
+                    education degree in Speech Therapy and a second specialty in Hearing and Speech Rehabilitation. She
+                    also
+                    has postgraduate studies in Special Education - Speech and Language Therapy specializing in
+                    Communication Disorders in Development.
+                    She has been working as a speech therapist since 2000 and since 2002 she maintains the Speech and
+                    Language Therapy Center. From September 2002 to June 2004 she worked at the Association of Parents
+                    and
+                    Guardians of Deaf and Hard of Hearing Children of Central Macedonia while at the same time she was
+                    an
+                    external scientific associate in the cochlear implantation department of the University Clinic
+                    "AHEPA"
+                    in Thessaloniki. In 2014, the collaboration with the Occupational Therapy Center "Exelixis" began,
+                    which
+                    led to the creation of the Center for Special Therapies Point.
+                    In 2022 she created the Center for Special Therapies Point, after many years of collaboration with
+                    the
+                    Occupational Therapy Center "Exelixis".
+                    She has specialized in the methods of Neurofunctional Reorganization, Intensive Interaction,
+                    P.E.S.E.
+                    (Level-1), MFT (Myofunctional Therapy) as well as the Multisensory Method of Phonological Awareness,
+                    Reading and Writing. She is a certified sponsor of the Vocal and Phonological Progression Test
+                    (P.S.L.,
+                    1995), the School Readiness Test A Test as well as the weighted language assessment tool Logometer.
+                    She participated in the workshop (25 hours) on: Problems that occur in the comprehension and
+                    production
+                    of oral speech, in relation to the particular characteristics of the Greek language. Their
+                    evaluation,
+                    diagnosis and treatment. (Levanti Irene, 2014).
+                    She has sufficient professional knowledge in Dyslexia – Assessment and Intervention Techniques as
+                    well
+                    as Deficit Hyperactivity Disorder (ADHD)- (Papanastasiou 2021). She has attended numerous seminars -
+                    workshops such as "Speech Problems: Assessment - Differential Diagnosis - Treatment ", THERAPLAY,
+                    "Stuttering in childhood", Vision and Learning, Vision and Autism , Cochlear Implants, Speech
+                    Therapy
+                    Massage, The Child with Sensory Processing Difficulties, Children's Tracing, Messy Play, Music
+                    Therapy,
+                    Executive Functions, MnemonicProcessing and its Contribution to the Daily Functioning of the Child,
+                    etc.
+                    She attends the Internationally Accredited Hanen Program for Early Childhood Professionals: Hanen
+                    "Teacher Talk".
+                    She has also taken part in educational - experiential seminars of the Gestalt Foundation.
+                    It continues to be constantly updated and educated on new scientific methods and developments
+                    related to
+                    the science of speech therapy.
+                </p>
+            </div>
+            <div class="our-team-2">
+                <h3>Gelly</h3>
+                <p>
+                    Teligiannidou Angeliki is a graduate of the speech therapy department of the School of Health and
+                    Welfare Professions of the Technological Educational Institute of Epirus in Greece. As part of her
+                    diploma thesis, she has conducted a pilot application of the TOPL 1 test in the Greek population.
+                    She has been working in the private sector as a Speech Therapist since 2007. Since 2008 she has been
+                    running the Speech and Language Therapy Center with Maria Tsimourdaga. She was an external
+                    scientific
+                    associate in the cochlear implantation department of the university clinic of the Ahepa Hospital in
+                    Thessaloniki, from 2008 to 2012.
+                    In 2014, the collaboration with the Occupational Therapy Center began, which led to the creation of
+                    the
+                    Center for Special Therapies Point.
+                    She is specialized in Lidcombe. methods, Neurofunctional Reorganization, Intensive Interaction,
+                    Palin
+                    PCI, P.E.K.S.E. (Level 1). She is a certified sponsor of the Phonetics and Phonological Evolution
+                    Test
+                    (P.S.L., 1995), the weighted language assessment tool Logometer as well as the Developmental Profile
+                    Communication Model: Model of Cycles.
+                    She participated in the workshop (25 hours) on: Problems that occur in the comprehension and
+                    production
+                    of oral speech, in relation to the particular characteristics of the Greek language. Their
+                    evaluation, diagnosis and treatment. (Levanti Irene, 2014).
+                    She has attended numerous seminars such as Stuttering in childhood, Evaluation – Therapeutic
+                    Intervention of Voice Disorders, , Speech Therapy Massage, Vision and Learning, Vision and Autism,
+                    Children's Tracing , Messy Play: Sensory play as a means of development etc.
+                    Attends the Internationally Accredited Hanen Program for
+                    Early Childhood Professionals: Hanen "Teacher Talk" (Center for Training and Lifelong Learning
+                    (K.E.DI.VI.M.) of the National and Kapodistrian University of Athens (NKUA)
+                    Finally, she has published in e-poster form at the 13th International Conference on Cochlear
+                    Implants (Munich, Germany 18-21 June 2014) her research paper on "Comparison of speech discrimination and
+                    comprehension of cochlear implant users: computer produced speech versus live voice"
+                    She continues to be constantly updated and educated on new scientific methods and developments
+                    related to
+                    the science of speech therapy.
+                </p>
+            </div>
+            <div class="our-team-3">
+                <h3>Elena</h3>
+                <p>
+                    Elena Koundourou studied occupational therapy at the Technological Educational Institute of Athens
+                    and
+                    completed her studies at the Karolinska Institute of Stockholm, where she also specialized in
+                    neurological rehabilitation. From 2000 to 2004 she worked as an external collaborator in a
+                    rehabilitation center, special therapies offices and home treatments, while at the same time she
+                    began
+                    to specialize in pediatric occupational therapy and even more specifically in autism. From 2005 to
+                    2008
+                    she was in charge of the occupational therapy department at a large rehabilitation center. In 2005
+                    he
+                    created the occupational therapy center "Exelixis" which maintains to this day with main interest
+                    the
+                    rehabilitation of neurological and developmental disorders in children. In 2014, the occupational
+                    therapy center "Exelixis" co-located and permanently collaborated with the Speech and Language
+                    Therapy
+                    Center, thus improving the benefits to its customers. This collaboration developed and matured, as a
+                    result of which the two centers were united under a new name and the creation of the center for
+                    special
+                    therapies "point".
+                    In addition to the above, she is a supervisor of students and graduates of occupational therapy, a
+                    member of the interdisciplinary team of many kindergartens in Thessaloniki and a member of the
+                    Panhellenic Association of Occupational Therapists. She also collaborates with the Metropolitan
+                    College
+                    of Thessaloniki, in various roles within the department of occupational therapy, such as that of
+                    teacher
+                    of courses, head teacher of first year and responsible practiceIng. She is specialized in Sensory
+                    Integration, Vision, PECS and TEEACH methods, Social Histories, Behavior Management methods for
+                    people
+                    with disabilities, Motor Learning, PNF, Functional Tone Management, Animal Assisted Therapy, Circus
+                    Therapy and many other methods. In 2020 she began her master's degree ( MSc) in rehabilitation with
+                    a
+                    view to neurodevelopmental pediatric rehabilitation at Oxford Brooks University , England.
+                    From the beginning of her career until now she has not stopped educating herself so that the times
+                    do
+                    not overtake her and she faces occupational therapy with unquenchable passion, love and
+                    responsibility.
+                </p>
+            </div>
+            <div class="our-team-4">
+                <h3>Katerina</h3>
+                <p>
+                    Katerina Gesou is a graduate of the BSc Occupational Therapy, Queen Margaret University and the
+                    Department of Physical Education and Sports Science (TEFAA) specializing in Special Physical
+                    Education.
+                    She continued her specialization with two master's degrees. The first comes from the Postgraduate
+                    Program "Kinesiology" of the Department of Physical Education and Sport Science of Serres where he
+                    dealt
+                    with the effect of Electrical Stimulation on the fatigue of the muscles of the thenar while the
+                    second
+                    from the Special Inclusive Education European University of Cyprus where he dealt with the
+                    Evaluation of
+                    the understanding of the emotions of others through Psychomotor by children with Autism Spectrum
+                    Disorder.
+                    At the level of training, she has completed the training of Sensory Integration while her personal
+                    portfolio includes the Seminar on learning infant swimming, the seminar on Psychomotor-
+                    Music-Kinetic
+                    Education of EKPA and the seminar of the Hellenic Society Halliwic. Swimming and Therapy for People
+                    with
+                    Special needs. She has also attended the 216-hour Professional Yoga Learning Program specializing in
+                    children's yoga.
+                    She is specialized in PECS and TEEACH methods, Social Histories, Behavioral Management methods for
+                    people with disabilities, Motor Learning and Cognitive Orientation Approach in the daily execution
+                    of a
+                    CO-OP (Cognitive Orientation to daily Occupational Performance) project.
+                    From 2005 to 2018 she worked as an external collaborator in kindergartens and structures for people
+                    with
+                    disabilities, organizing psychomotor and adapted physical activity programs for children with
+                    difficulties in movement. Since 2007 she has been delivering personalized programs of Kinetic
+                    Intervention, Occupational Therapy and Hydrotherapy at home in collaboration with private and public
+                    swimming pools of the city and from 2012-2017 she provided educational parallel support to children
+                    with
+                    Autism Spectrum Disorder (ASD) and Down syndrome, while at the same time she was an external partner
+                    in
+                    a private Physiotherapy Center where she began to specialize in pediatric Occupational Therapy. From
+                    2017-2022 she worked in large Rehabilitation Centers framing the Department of Adult Occupational
+                    Therapy, while at the same time she was in charge of their respective Pediatric Department. Since
+                    2021
+                    she has been working as an occupational therapist at the Pediatric Therapy Center "Excelixi" of
+                    Elena
+                    Koundourou while also collaborating with the Metropolitan College of Thessaloniki as a teacher. The
+                    collaboration with Elena Koundourou developed and matured, resulting in the creation of the Center
+                    for Special Therapies "point".
+                    From the beginning of her career until now she has not stopped training, while her unstoppable
+                    passion
+                    and love for Occupational Therapy remain the driving force to continue her Lifelong Education.
+                </p>
+            </div>
+        </div>
+
+    </section>
 </body>
