--- a/about-us.html
+++ b/about-us.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Simeio Therapy | About Us</title>
 </head>
+
 <body>
     <!--Logo and navbar with links-->
 
@@ -34,9 +35,9 @@
         </nav>
     </header>
 
-     <!-- About us and Image-->
+    <!-- About us and Image-->
 
-     <section class="main-bg">
+    <section class="main-bg">
         <div class="image-left">
             <img src="assets/images/image-left.jpg" width="600" height="400" alt="">
         </div>
@@ -60,51 +61,46 @@
             <div id="our-team-1">
                 <h3>Maria</h3>
                 <p>
-                    Maria Tsimourdaga is a graduate of St. Kliment Ohridski University, Sofia, Bulgaria. He has a higher
+                    Maria Tsimourdaga is a graduate of St. Kliment Ohridski University, Sofia, Bulgaria. She holds a
+                    higher
                     education degree in Speech Therapy and a second specialty in Hearing and Speech Rehabilitation. She
-                    also
-                    has postgraduate studies in Special Education - Speech and Language Therapy specializing in
+                    also holds postgraduate studies in Special Education - Speech and Language Therapy specializing in
                     Communication Disorders in Development.
                     She has been working as a speech therapist since 2000 and since 2002 she maintains the Speech and
                     Language Therapy Center. From September 2002 to June 2004 she worked at the Association of Parents
-                    and
-                    Guardians of Deaf and Hard of Hearing Children of Central Macedonia while at the same time she was
-                    an
-                    external scientific associate in the cochlear implantation department of the University Clinic
-                    "AHEPA"
-                    in Thessaloniki. In 2014, the collaboration with the Occupational Therapy Center "Exelixis" began,
-                    which
-                    led to the creation of the Center for Special Therapies Point.
-                    In 2022 she created the Center for Special Therapies Point, after many years of collaboration with
-                    the
-                    Occupational Therapy Center "Exelixis".
+                    and Guardians of Deaf and Hard of Hearing Children of Central Macedonia while at the same time she
+                    was an external scientific associate in the cochlear implantation department of the University
+                    Clinic
+                    "AHEPA" in Thessaloniki. In 2014, the collaboration with the Occupational Therapy Center "Exelixis"
+                    began,
+                    which led to the creation of the Center for Special Therapies Point.
+                    In 2022 she created the Center for Special Therapies "Simeio", after many years of collaboration
+                    with
+                    the Occupational Therapy Center "Exelixis".
                     She has specialized in the methods of Neurofunctional Reorganization, Intensive Interaction,
                     P.E.S.E.
                     (Level-1), MFT (Myofunctional Therapy) as well as the Multisensory Method of Phonological Awareness,
                     Reading and Writing. She is a certified sponsor of the Vocal and Phonological Progression Test
-                    (P.S.L.,
-                    1995), the School Readiness Test A Test as well as the weighted language assessment tool Logometer.
+                    (P.S.L., 1995), the School Readiness Test A Test as well as the weighted language assessment tool
+                    Logometer.
                     She participated in the workshop (25 hours) on: Problems that occur in the comprehension and
-                    production
-                    of oral speech, in relation to the particular characteristics of the Greek language. Their
-                    evaluation,
-                    diagnosis and treatment. (Levanti Irene, 2014).
+                    production of oral speech, in relation to the particular characteristics of the Greek language.
+                    Their
+                    evaluation, diagnosis and treatment. (Levanti Irene, 2014).
                     She has sufficient professional knowledge in Dyslexia – Assessment and Intervention Techniques as
-                    well
-                    as Deficit Hyperactivity Disorder (ADHD)- (Papanastasiou 2021). She has attended numerous seminars -
+                    well as Deficit Hyperactivity Disorder (ADHD)- (Papanastasiou 2021). She has attended numerous
+                    seminars -
                     workshops such as "Speech Problems: Assessment - Differential Diagnosis - Treatment ", THERAPLAY,
                     "Stuttering in childhood", Vision and Learning, Vision and Autism , Cochlear Implants, Speech
-                    Therapy
-                    Massage, The Child with Sensory Processing Difficulties, Children's Tracing, Messy Play, Music
-                    Therapy,
-                    Executive Functions, MnemonicProcessing and its Contribution to the Daily Functioning of the Child,
-                    etc.
+                    Therapy Massage, The Child with Sensory Processing Difficulties, Children's Tracing, Messy Play,
+                    Music
+                    Therapy, Executive Functions, MnemonicProcessing and its Contribution to the Daily Functioning of
+                    the Child, etc.
                     She attends the Internationally Accredited Hanen Program for Early Childhood Professionals: Hanen
                     "Teacher Talk".
                     She has also taken part in educational - experiential seminars of the Gestalt Foundation.
                     It continues to be constantly updated and educated on new scientific methods and developments
-                    related to
-                    the science of speech therapy.
+                    related to the science of speech therapy.
                 </p>
             </div>
             <div class="our-team-2">
@@ -138,7 +134,8 @@
                     Early Childhood Professionals: Hanen "Teacher Talk" (Center for Training and Lifelong Learning
                     (K.E.DI.VI.M.) of the National and Kapodistrian University of Athens (NKUA)
                     Finally, she has published in e-poster form at the 13th International Conference on Cochlear
-                    Implants (Munich, Germany 18-21 June 2014) her research paper on "Comparison of speech discrimination and
+                    Implants (Munich, Germany 18-21 June 2014) her research paper on "Comparison of speech
+                    discrimination and
                     comprehension of cochlear implant users: computer produced speech versus live voice"
                     She continues to be constantly updated and educated on new scientific methods and developments
                     related to
@@ -149,40 +146,34 @@
                 <h3>Elena</h3>
                 <p>
                     Elena Koundourou studied occupational therapy at the Technological Educational Institute of Athens
-                    and
-                    completed her studies at the Karolinska Institute of Stockholm, where she also specialized in
+                    and completed her studies at the Karolinska Institute of Stockholm, where she also specialized in
                     neurological rehabilitation. From 2000 to 2004 she worked as an external collaborator in a
                     rehabilitation center, special therapies offices and home treatments, while at the same time she
-                    began
-                    to specialize in pediatric occupational therapy and even more specifically in autism. From 2005 to
-                    2008
-                    she was in charge of the occupational therapy department at a large rehabilitation center. In 2005
-                    he
-                    created the occupational therapy center "Exelixis" which maintains to this day with main interest
-                    the
-                    rehabilitation of neurological and developmental disorders in children. In 2014, the occupational
-                    therapy center "Exelixis" co-located and permanently collaborated with the Speech and Language
-                    Therapy
-                    Center, thus improving the benefits to its customers. This collaboration developed and matured, as a
+                    began to specialize in pediatric occupational therapy and even more specifically in autism. From
+                    2005 to 2008 she was in charge of the occupational therapy department at a large rehabilitation
+                    center.
+                    In 2005 she created the occupational therapy center "Exelixis" which maintains to this day with main
+                    interest the rehabilitation of neurological and developmental disorders in children. In 2014, the
+                    occupational therapy center "Exelixis" co-located and permanently collaborated with the Speech and
+                    Language
+                    Therapy Center, thus improving the benefits to its customers. This collaboration developed and
+                    matured, as a
                     result of which the two centers were united under a new name and the creation of the center for
-                    special
-                    therapies "point".
+                    special therapies "Simeio".
                     In addition to the above, she is a supervisor of students and graduates of occupational therapy, a
                     member of the interdisciplinary team of many kindergartens in Thessaloniki and a member of the
                     Panhellenic Association of Occupational Therapists. She also collaborates with the Metropolitan
-                    College
-                    of Thessaloniki, in various roles within the department of occupational therapy, such as that of
-                    teacher
-                    of courses, head teacher of first year and responsible practiceIng. She is specialized in Sensory
-                    Integration, Vision, PECS and TEEACH methods, Social Histories, Behavior Management methods for
-                    people
-                    with disabilities, Motor Learning, PNF, Functional Tone Management, Animal Assisted Therapy, Circus
-                    Therapy and many other methods. In 2020 she began her master's degree ( MSc) in rehabilitation with
-                    a
-                    view to neurodevelopmental pediatric rehabilitation at Oxford Brooks University , England.
+                    College of Thessaloniki, in various roles within the department of occupational therapy, such as
+                    that of
+                    teacher of courses, head teacher of first year and responsible practiceIng. She is specialized in
+                    Sensory Integration, Vision, PECS and TEEACH methods, Social Histories, Behavior Management methods
+                    for
+                    people with disabilities, Motor Learning, PNF, Functional Tone Management, Animal Assisted Therapy,
+                    Circus Therapy and many other methods. In 2020 she began her master's degree ( MSc) in
+                    rehabilitation with
+                    a view to neurodevelopmental pediatric rehabilitation at Oxford Brooks University , England.
                     From the beginning of her career until now she has not stopped educating herself so that the times
-                    do
-                    not overtake her and she faces occupational therapy with unquenchable passion, love and
+                    do not overtake her and she faces occupational therapy with unquenchable passion, love and
                     responsibility.
                 </p>
             </div>
@@ -193,11 +184,11 @@
                     Department of Physical Education and Sports Science (TEFAA) specializing in Special Physical
                     Education.
                     She continued her specialization with two master's degrees. The first comes from the Postgraduate
-                    Program "Kinesiology" of the Department of Physical Education and Sport Science of Serres where he
+                    Program "Kinesiology" of the Department of Physical Education and Sport Science of Serres where she
                     dealt
                     with the effect of Electrical Stimulation on the fatigue of the muscles of the thenar while the
                     second
-                    from the Special Inclusive Education European University of Cyprus where he dealt with the
+                    from the Special Inclusive Education European University of Cyprus where she dealt with the
                     Evaluation of
                     the understanding of the emotions of others through Psychomotor by children with Autism Spectrum
                     Disorder.
@@ -229,7 +220,7 @@
                     Elena
                     Koundourou while also collaborating with the Metropolitan College of Thessaloniki as a teacher. The
                     collaboration with Elena Koundourou developed and matured, resulting in the creation of the Center
-                    for Special Therapies "point".
+                    for Special Therapies "Simeio".
                     From the beginning of her career until now she has not stopped training, while her unstoppable
                     passion
                     and love for Occupational Therapy remain the driving force to continue her Lifelong Education.
