--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <a href="index.html" class="active">Home</a>
                 </li>
                 <li>
-                    <a href="#">About Us</a>
+                    <a href="about-us.html">About Us</a>
                 </li>
                 <li>
                     <a href="#">Contact</a>
