Fix style for services section

--- a/about-us.html
+++ b/about-us.html
@@ -18,7 +18,9 @@
 
     <header>
         <a href="index.html">
-            <img src="assets/images/logo-image.png" alt="Home button" class="logo">
+            <h1>
+                <img src="assets/images/logo-image.png" alt="Home button" class="logo">
+            </h1>
         </a>
         <nav>
             <ul class="menu">
@@ -54,6 +56,9 @@
         </div>
 
     </section>
+
+    <!-- Our team-->
+
     <section class="our-team-container">
         <h2>Our Team</h2>
 
